--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="bar"> | </div>
         <div class="github-image">
-            <a href="https://github.com/govind-ik/learning" target="_blank">
+            <a href="https://github.com/govind-ik/Codeforces_probelm_selector" target="_blank">
                 <i class="fa-brands fa-github fa-lg" style="color: hsl(200, 7%, 92%);"></i>
             </a>
         </div>
